native/include/sv_stats.h

// TransmitStats struct is defined in sv_native.h

// ============================================================================
// FUNCTIONS
// ============================================================================

/**
 * Reset all statistics to zero
 */
void npcap_stats_reset(void);
/**
 * Start a new statistics session
 */
void npcap_stats_session_start(void);
/**
 * End the current statistics session
 */
void npcap_stats_session_end(void);
/**
 * Update rate calculations (call periodically)
 */
void npcap_stats_update_rates(void);
/**
 * Get current statistics
 * @param stats Output structure
 */
void npcap_stats_get(TransmitStats* stats);
/**
 * Get session duration in milliseconds
 * @return Duration in ms
 */
uint64_t npcap_stats_get_duration_ms(void);
/**
 * Format a bit rate as human-readable string
 * @param bps Bits per second
 * @param buf Output buffer
 * @param buflen Buffer size
 */
void npcap_stats_format_rate(double bps, char* buf, size_t buflen);