native/include/npcap_transmitter.h

// ============================================================================
// INTERFACE FUNCTIONS (NpcapInterface defined in sv_native.h)
// ============================================================================

/**
 * List available network interfaces
 * @param interfaces Array to store interface info
 * @param max_count Maximum number of interfaces to return
 * @return Number of interfaces found, or -1 on error
 */
int npcap_list_interfaces(NpcapInterface* interfaces, int max_count);
/**
 * Get last error message
 * @return Error string
 */
const char* npcap_get_last_error(void);
/**
 * Open a network interface for transmission
 * @param device_name Device name (e.g., "\\Device\\NPF_{GUID}")
 * @return 0 on success, -1 on error
 */
int npcap_open(const char* device_name);
/**
 * Close the currently open interface
 */
void npcap_close(void);
/**
 * Check if an interface is open
 * @return 1 if open, 0 if not
 */
int npcap_is_open(void);